syntax = "proto3";
option java_package = "name.benjaminabbitt.evented.bookmarks";

import "evented/core/evented.proto";
import "google/protobuf/empty.proto";

service Bookmark {
  rpc createBookmark(CreateBookmark) returns (google.protobuf.Empty);
  rpc deleteBookmark(DeleteBookmark) returns (google.protobuf.Empty);
}

message CreateBookmark {
  evented.core.UUID id = 1;
  string url = 2;
  string name = 3;
}

message BookmarkCreated{
  evented.core.UUID id = 1;
  string url = 2;
  string name = 3;

}

message DeleteBookmark{
  evented.core.UUID id = 1;
}

message BookmarkDeleted{
  evented.core.UUID id = 1;
}